--- a/UI/styles.css
+++ b/UI/styles.css
@@ -51,3 +51,10 @@ cursor: pointer;
     transform: translateY(200px);
 
 }
+
+i{
+    border-radius: 50%;
+    background-color: orange;
+    color: white;
+    padding: 10px;
+}
