--- a/UI/styles.css
+++ b/UI/styles.css
@@ -1,53 +1,27 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/*Karen's styling*/
-#navbar{
-    width: 100%;
-    height: 500px;
-    max-height: 600px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url("../images/download.jpg");
-    background-attachment: scroll;
-}
-
-#navbar ul{
+/* styling for the services section */
+#services{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    transform: translateY(50px);
-}
-#navbar ul li{
-    list-style-type: none;
-    font-size: 20px;
-    color: aliceblue;
-    margin: 5px;
-    padding: 3px;
-    cursor: pointer;
+justify-content: space-evenly;
+margin-top: 300px;
+
 }
 
-#navbar ul li button{
-    justify-self: flex-end;
-background-color: orange;
-color: aliceblue;
-/* font-size: 18px; */
-padding: 5px;
-border: 1px solid orange;
-cursor: pointer;
+.single-service{
+    width: 81px;
+    height: 82px;
+    /* box-sizing: border-box;
+    background: white;
+    box-shadow: 1px 1px 1px 1px black ; */
 }
-#navbar h2{
-    position: relative;
+.service-icons{
+    font-size: 40px;
+    color: white;
+    background: orangered;
+    border-radius: 50%;
+    padding: 7px 7px 6px 13px;
     text-align: center;
-    font-weight: 800;
-    color: aliceblue;
-    line-height: 1.2rem;
-    /* letter-spacing: 0.5rem; */
-    font-size: 60px;
-    font-family:  'Arial Narrow Bold', sans-serif;
-    transform: translateY(200px);
+}
 
+.single-service p{
+    position: absolute;
 }
