--- a/UI/styles.css
+++ b/UI/styles.css
@@ -28,14 +28,22 @@
     margin: 5px;
     padding: 3px;
     cursor: pointer;
+    text-transform: uppercase;
+}
+#navbar div{
+    display: flex;
+    transform: translateY(17px);
+    justify-content: flex-end;
+    align-items: center;
+
 }
 
-#navbar ul li button{
-    justify-self: flex-end;
+#navbar div button{
 background-color: orange;
 color: aliceblue;
 /* font-size: 18px; */
 padding: 5px;
+margin-right: 5px;
 border: 1px solid orange;
 cursor: pointer;
 }
@@ -52,7 +60,18 @@ cursor: pointer;
 
 }
 
-i{
+#navbar li i.fa-bookmark{
+    margin-right: 3px;
+}
+
+#navbar div i.fas{
+    margin: 5px;
+    margin-right: 10px;
+    padding: 3px;
+    color: aliceblue;
+  
+}
+.icon{
     border-radius: 50%;
     background-color: orange;
     color: white;
