added images and order buttons to drinks page

--- a/UI/styles.css
+++ b/UI/styles.css
@@ -9,15 +9,43 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    width: 100%;
+    width: 90%;
+    padding: 1.2rem 0;
+    justify-content: space-between;
+    margin: 0 auto;
 }
 
 .drink {
-
+    width: 70%;
+    height: 100%;
+    flex: 0 30%;
 }
 
-.drink img{
-    width: 300px;
-    height: 300px;
-    padding: 20px 30px;
+.drink img {
+    width: 100%;
+    height: 350px;
+    border-radius: 7px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.18);
+}
+.drink p{
+    /* text-align: center; */
+    padding-bottom: 10px;
+}
+.drink .details {
+    text-align: center;
+    padding: 7px 0 16px 0;
+   
+}
+.drink button {
+    padding: 6px 14px;
+    border-radius: 6px;
+    color: whitesmoke;
+    font-size: .9rem;
+    background-color: rgb(44, 138, 86);
+    /* margin: 0 120px; */
+}
+@media only screen and (max-width: 650px) {
+    .all-drinks {
+        flex-direction: column;
+    }
 }
