--- a/UI/styles.css
+++ b/UI/styles.css
@@ -1,89 +1,178 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* Scovia's styles */
+header {
+  position: relative;
+  height: 170px;
+  background: url(../images/drinks/latte.jpg) center;
+}
+
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 25px 30px 0 45px;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: row;
+  padding-right: 85px;
+  align-items: flex-start;
+}
+
+nav li {
+  list-style: none;
+  display: inline-blocks;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+nav li a {
+  padding: 10px 12px;
+  color: black;
+  text-decoration: none;
+}
+.cart a {
+  text-decoration: none;
+  background-color: royalblue;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.cart ion-icon {
+  padding-right: 6px;
+  vertical-align: bottom;
+  font-size: 20px;
+}
+.cart span {
+  position: absolute;
+  padding-bottom: 120px;
+}
+
 .all-drinks {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    width: 90%;
-    padding: 1.2rem 0;
-    justify-content: space-between;
-    margin: 0 auto;
-    
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 90%;
+  padding: 1.2rem 0;
+  justify-content: space-between;
+  margin: 0 auto;
 }
 
 .drink {
-    width: 70%;
-    height: 100%;
-    flex: 0 30%;
+  width: 70%;
+  height: 100%;
+  flex: 0 30%;
 }
 .img-div {
-    position: relative;
-    
+  position: relative;
 }
 
 .drink .image {
-    width: 100%;
-    height: 300px;
-    border-radius: 7px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.18);
-    opacity: 1;
-    display: block;
-    transition: .6s ease;
-    backface-visibility: hidden;
+  width: 100%;
+  height: 300px;
+  border-radius: 7px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.18);
+  opacity: 1;
+  display: block;
+  transition: 0.6s ease;
+  backface-visibility: hidden;
 }
 
 .price-text {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    text-align: center;
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .img-div:hover .image {
-    opacity: 0.3;
+  opacity: 0.3;
 }
 
 .img-div:hover .price-text {
-    opacity: 1;
+  opacity: 1;
 }
 
 .price {
-    font-size: 1.2rem;
-    font-weight: bold;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
-.drink p{
-    padding: 10px;
+.drink p {
+  padding: 10px;
 }
 .drink .details {
-    text-align: center;
-    padding: 7px 0 16px 0;
-   
+  text-align: center;
+  padding: 7px 0 16px 0;
 }
 .drink button {
-    padding: 6px 14px;
-    border-radius: 6px;
-    color: whitesmoke;
-    font-size: .9rem;
-    background-color: rgb(44, 138, 86);
-    cursor: pointer;
+  padding: 6px 14px;
+  border-radius: 6px;
+  color: whitesmoke;
+  font-size: 0.9rem;
+  background-color: rgb(44, 138, 86);
+  cursor: pointer;
+}
+
+.footer {
+  height: 180px;
+  background-color: seashell;
+  margin: 10px auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.footer > div {
+  padding: 10px;
+}
+.footer h3 {
+  padding: 10px;
+  text-align: justify;
+}
+.footer p {
+  padding: 4px;
+  font-size: 1rem;
+  text-align: justify;
+}
+#copyright {
+  width: 100%;
+  height: 60px;
+  /* padding-bottom: 20px; */
+  text-align: center;
+  background-color: rgb(250, 229, 215);
 }
 @media only screen and (max-width: 650px) {
-    .all-drinks {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .drink {
-        width: 85%;
-    }
+  .all-drinks {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .drink {
+    width: 85%;
+  }
+  .footer {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    height: auto;
+  }
+  .footer p {
+    font-size: 0.9rem;
+  }
 }
